fix error in docker compose up command